--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Alpha-Prototype-3D</div>
+        <div id="unity-build-title">Shadow Walker - beta build</div>
       </div>
     </div>
     <script>
